# docs/swagger.yaml
@@ -77,6 +77,32 @@ paths:
       summary: Get By ID Data Customer.
       tags:
       - Customer
+  /insert:
+    post:
+      consumes:
+      - application/json
+      description: Input data customer.
+      parameters:
+      - description: Payload Body [RAW]
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controller.Customer'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Customer'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Insert data customer.
+      tags:
+      - Customer
 schemes:
 - https
 - http
